    writes to it; thanks to Tim Dijkstra, Neil Brown, and Luis Rodrigo
    Gallardo Cruz (closes: #415441).
  * mkconf now tries to preserve existing values for DEVICE, CREATE and
    HOMEHOST (in addition to MAILADDR, which it preserved previously already).
    PROGRAM is preserved but only added to mdadm.conf if it occured in the
    previously existing configuration file.

 -- martin f. krafft <madduck@debian.org>  Sat, 05 May 2007 16:12:29 +0200

mdadm (2.6.1-1~exp.5) experimental; urgency=low

  * Fix mdadm.conf typo; thanks Tim Phipps (closes: #416626).
  * Execute udevtrigger after assembly of arrays during initramfs processing;
    thanks to Michael Prokop (closes: #416658).

 -- martin f. krafft <madduck@debian.org>  Sat, 31 Mar 2007 12:12:27 +0200

mdadm (2.6.1-1~exp.4) experimental; urgency=low

  * Incorporate patches by Peter Samuelson fixing several typography as well
    as typesetting issues in the manpages. Thanks a lot! (closes: #414688)

 -- martin f. krafft <madduck@debian.org>  Tue, 13 Mar 2007 19:26:37 +0100

mdadm (2.6.1-1~exp.3) experimental; urgency=low

  * Patch by Jørn V. Christensen to properly handle multiple email addresses
    for the MAILADDR setting (closes: #413330).

 -- martin f. krafft <madduck@debian.org>  Mon,  5 Mar 2007 11:19:18 +0000

mdadm (2.6.1-1~exp.2) experimental; urgency=low

  * Updated debconf translations:
    - Galician by Jacobo Tarrio (closes: #412203).

 -- martin f. krafft <madduck@debian.org>  Sat, 24 Feb 2007 16:41:16 +0100

mdadm (2.6.1-1~exp.1) experimental; urgency=low

  * New upstream release, targeted at experimental until etch is out:
    - adds --syslog option (closes: #402457).
    - now can --wait for sync activity to finish (closes: #328197).
    - for other changes, please see /usr/share/doc/mdadm/changelog.gz
  * Updated debconf translations:
    - Portuguese by Rui Branco (closes: #411745).

 -- martin f. krafft <madduck@debian.org>  Thu, 22 Feb 2007 16:35:16 +0100
