@@ -2,3 +2,4 @@ mdadm.8
 md.4
 mdadm.conf.5
 debian/mdrun.8
+debian/mdadm-startall.8
